Add formated date

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   
       <form class="form" action="">
         <input class="form-input" data-form-input type="text">
+        <input type="datetime-local" data-form-date placeholder="Preencher com dia, mês e ano, ex: 01/01/2022">
         <button class="form-button" data-form-button> Novo Item </button>
       </form>
 
@@ -24,6 +25,7 @@
      
       </ul>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment-with-locales.min.js"></script>
     <script type="module" src="./assets/js/main.js"></script>
 </body>
 </html>
